fix: align game input text left

--- a/src-taro/components/components.scss
+++ b/src-taro/components/components.scss
@@ -95,6 +95,8 @@
 .question-input {
   flex: 1;
   min-width: 0;
+  display: flex;
+  align-items: center;
   height: 64px;
   padding: 0 14px;
   border: 2px solid #3e2723;
@@ -103,15 +105,19 @@
   box-shadow: inset 0 2px 4px rgba(62, 39, 35, 0.08);
   box-sizing: border-box;
   font-size: 22px;
-  text-align: center;
+  line-height: 64px;
+  text-align: left;
 }
 
-.question-input input {
+.question-input input,
+.question-input .taro-input-core {
   height: 100%;
+  min-height: 64px;
   color: #1e1b13;
   font-size: 22px;
   font-weight: 600;
-  text-align: center;
+  line-height: 64px;
+  text-align: left;
 }
 
 .question-side-action,
